# tauri-m3u8-download

./: .gitignore  ACTIONS_TROUBLESHOOTING.md  GITHUB_ACTIONS.md  GITHUB_ACTIONS_SUMMARY.md  INSTALL_MACOS.md  PRODUCTION_DEBUG.md  PROJECT_COMPLETE.md  README.md  RELEASE_GUIDE.md  TWITTER_EMOJI_ICON.md  build-and-test.sh  package-lock.json  package.json  quick-start.sh  release.sh  test-build.sh  使用指南.md
.github/workflows/: build-release.yml
src/: index.html  mitm.html  stream-saver.js
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
