[package]
name = "m3u8-downloader"
version = "3.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "m3u8_downloader_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-http = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-localhost = "2.3.1"

# 自定义 features：可选的开发者工具支持
[features]
# 默认不启用任何 feature（发布版本）
default = []
# devtools feature：启用开发者工具（仅用于调试构建）
# ⚠️ 警告：macOS 上使用私有 API，无法通过 App Store 审核
devtools = ["tauri/devtools"]

